Fix broken layout

--- a/app/assets/stylesheets/modules/main-chat/_repeat-messages.scss
+++ b/app/assets/stylesheets/modules/main-chat/_repeat-messages.scss
@@ -1,5 +1,4 @@
 &__message {
-  height: 123px;
   padding-top: 35px;
   &__user {
     padding-bottom: 12px;
@@ -18,6 +17,10 @@
   &__text {
     padding-bottom: 46px;
     color: #434a54;
-    font-size: 14px;
+    font-size: 14px;}
+  &__image{
+    width: 50%;
+    height: auto;
+    padding-bottom: 46px;
   }
 }
